// Example Protocol Buffer file.
syntax = "proto2";

package my.protobuf;

option java_multiple_files = true;
option java_package = "com.company.my.package";

import "example/module.proto";

message ExampleMessage {
  option (extended_option) = {
    number_value: 1
    bool_value: true
  };
  required string id = 1;
  optional int32 count = 2;

  optional string foo = 3 [default = "valid \t escape \n"];
  optional string bar = 4 [default = "invalid \Uabc escape"];
}
